# create_vox

./: .gitignore  Cargo.toml  LICENSE  Nodes  README.md
src/: color.rs  convert.rs  copy.rs  layer.rs  lib.rs  loader.rs  model.rs  node.rs  riff.rs  voxel.rs  voxfile.rs  voxobject.rs  writing.rs
src/voxfile/: mod.rs  palette.rs  read.rs  voxfile.rs  write.rs
tests/: benchmark.rs  integration_test.rs  model.rs  node_test.rs  opening_tests.rs  riff_test.rs  voxfile_test.rs
