[package]
name = "create_vox"
version = "1.0.1"
license = "MIT"
authors = ["Mickey Fraser <mickey_fraser@outlook.com>"]
description = "A rust library for creating magicavoxel files"
keywords = ["voxel", "Magicavoxel"]
edition = "2018"
repository = "https://github.com/2crabs/create_vox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
easybench = "1.1.0"
